
    HADOOP-9652.  RawLocalFs#getFileLinkStatus does not fill in the link owner
    and mode.  (Andrew Wang via Colin Patrick McCabe)

    HADOOP-9875.  TestDoAsEffectiveUser can fail on JDK 7.  (Aaron T. Myers via
    Colin Patrick McCabe)

    HADOOP-9865.  FileContext#globStatus has a regression with respect to
    relative path.  (Chuan Lin via Colin Patrick McCabe)


Release 2.1.1-beta - UNRELEASED

  INCOMPATIBLE CHANGES

  NEW FEATURES

  IMPROVEMENTS
 
    HADOOP-9446. Support Kerberos SPNEGO for IBM JDK. (Yu Gao via llu)

    HADOOP-9787. ShutdownHelper util to shutdown threads and threadpools.
    (Karthik Kambatla via Sandy Ryza)

    HADOOP-9803. Add a generic type parameter to RetryInvocationHandler.
    (szetszwo)

    HADOOP-9821. ClientId should have getMsb/getLsb methods. 
    (Tsuyoshi OZAWA via jing9)

    HADOOP-9435.  Support building the JNI code against the IBM JVM.
    (Tian Hong Wang via Colin Patrick McCabe)

    HADOOP-9833 move slf4j to version 1.7.5 (Kousuke Saruta via stevel)

    HADOOP-9672. Upgrade Avro dependency to 1.7.4. (sandy via kihwal)

    HADOOP-9789. Support server advertised kerberos principals (daryn)

    HADOOP-8814. Replace string equals "" by String#isEmpty().
    (Brandon Li via suresh)

    HADOOP-9802. Support Snappy codec on Windows. (cnauroth)

    HADOOP-9879. Move the version info of zookeeper dependencies to
    hadoop-project/pom (Karthik Kambatla via Sandy Ryza)

  OPTIMIZATIONS

  BUG FIXES

    HADOOP-9768. chown and chgrp reject users and groups with spaces on platforms
    where spaces are otherwise acceptable. (cnauroth)

    HADOOP-9801. Configuration#writeXml uses platform defaulting encoding, which
    may mishandle multi-byte characters. (cnauroth)

    HADOOP-9806 PortmapInterface should check if the procedure is out-of-range
    (brandonli)

    HADOOP-9527. Add symlink support to LocalFileSystem on Windows.
    (Arpit Agarwal via cnauroth)
