@@ -59,6 +59,9 @@ public class TestHDFSFileContextMainOperations extends
     defaultWorkingDirectory = fc.makeQualified( new Path("/user/" + 
         UserGroupInformation.getCurrentUser().getShortUserName()));
     fc.mkdir(defaultWorkingDirectory, FileContext.DEFAULT_PERM, true);
+    // Make defaultWorkingDirectory snapshottable to enable 
+    // testGlobStatusFilterWithHiddenPathTrivialFilter
+    cluster.getFileSystem().allowSnapshot(defaultWorkingDirectory);
   }
 
   private static void restartCluster() throws IOException, LoginException {
@@ -73,6 +76,9 @@ public class TestHDFSFileContextMainOperations extends
     defaultWorkingDirectory = fc.makeQualified( new Path("/user/" + 
         UserGroupInformation.getCurrentUser().getShortUserName()));
     fc.mkdir(defaultWorkingDirectory, FileContext.DEFAULT_PERM, true);
+    // Make defaultWorkingDirectory snapshottable to enable 
+    // testGlobStatusFilterWithHiddenPathTrivialFilter
+    cluster.getFileSystem().allowSnapshot(defaultWorkingDirectory);
   }
       
   @AfterClass
@@ -92,6 +98,11 @@ public class TestHDFSFileContextMainOperations extends
     super.tearDown();
   }
 
+  @Override
+  protected Path getHiddenPathForTest() {
+    return new Path(defaultWorkingDirectory, ".snapshot");
+  }
+  
   @Override
   protected Path getDefaultWorkingDirectory() {
     return defaultWorkingDirectory;
